# ML-CDS-2025

./: README.md  environment.yml  pyproject.toml
configs/: heico-sensors1-finetuned_vjepa-train.yaml  heico-sensors1-pretrained_vjepa-train.yaml  heico-sensors2-finetuned_vjepa-eval.yaml  heico-sensors2-finetuned_vjepa-train.yaml  heico-sensors2-pretrained_vjepa-eval.yaml  heico-sensors2-pretrained_vjepa-train.yaml  heico-video-finetuned_vjepa-eval.yaml  heico-video-finetuned_vjepa-train.yaml  heico-video-pretrained_vjepa-eval.yaml  heico-video-pretrained_vjepa-train.yaml
resources/HeiCo/: endovis-2017-split.json  video-metadata.json
src/: environment.yml
src/multimods3/data/: folder_reader.py  heico_dataset.py  pyav_reader.py
src/multimods3/models/: attentive_pooler.py  sensor_encoder.py  vision_transformer.py
src/multimods3/scripts/: full_run.py  main.py
src/multimods3/utils/: distributed.py  info.py  logs.py  masks.py  misc.py  schedulers.py  tensors.py  weighted_sampler.py
src/multimods3/utils/models/: modules.py  patch_embed.py  pos_embs.py
src/multimods3/utils/video/: classification.py  functional.py  transforms.py
